# asl_detection

./: .gitignore  LICENSE  README.md  config.cfg  message.txt  process_keypoints.py  pyproject.toml
.devcontainer/: DOCKERFILE  devcontainer.json  postCreate.sh
.dvc/: config
.dvc/auth/: proud-outrider-451016-c4-3e56394067ff.json
backend/: algorithms.py  cameras.py  custom_types.py  main.py  upload_endpoints.py  vision.py
frontend/: package-lock.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AlgorithmSelectPanel.css  AlgorithmSelectPanel.tsx  CameraSelectDropdown.css  CameraSelectDropdown.tsx  CameraSelectPanel.css  CameraSelectPanel.tsx  GifPlayer.tsx  LanguageSelectDropdown.css  LanguageSelectDropdown.tsx  TabNavigation.tsx  UploadButton.css  UploadButton.tsx  VIdeoPage.css  VideoDisplay.css  VideoDisplay.tsx  VideoPlayer.css  VideoPlayer.tsx
frontend/src/types/: custom_types.ts
machine_learning/: extract_keypoints.py
machine_learning/datasets/asl_fingerspelling/: extraction.ipynb
machine_learning/datasets/asl_now/: .gitignore  asl-now-fingerspelling.dvc  extracting_keypoints.ipynb  extraction.ipynb  preparation.ipynb
machine_learning/datasets/asl_word_detection/: actions_list.json  extraction.ipynb
machine_learning/datasets/how2sign/: .gitignore  english_translation.dvc  keypoints.dvc  prepare_how2sing.ipynb
machine_learning/datasets/kaggle_fingerspelling/: dataset.dvc
machine_learning/datasets/own_dataset/: .gitignore  augmented_dataset.dvc  data_augmentation.ipynb  extra_words.txt  full_dataset.dvc  keypoint_max.npy  keypoint_min.npy  keypoints.dvc  keypoints_gpu.dvc  keypoints_npy.dvc  labels_list.txt  normalize_keypoints.ipynb  normalized_keypoints.dvc  own_words.dvc  prepare_new_words.ipynb  prepare_own_dataset.ipynb  processed_npy.dvc  shortened_videos.dvc  train_mean.npy  train_std.npy  update_own_dataset.ipynb  videos_augmented.dvc  videos_processed.dvc
machine_learning/datasets/own_datasets/: .gitignore
machine_learning/datasets/wlasl/: .gitignore  keypoints.dvc  missing.txt  prepare_wsasl.ipynb  raw_videos.dvc
machine_learning/notebooks/: mediapipe_holistics.ipynb
(+49 files in other folders)
